ola-parser/src/testdata/syntaxTests/parsing/var_storage_var.sol
contract C {
    var a;
}
// ----
// ParserError 9182: (17-20): fn, variable, struct or modifier declaration expected.
